# geoff-app

./: .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  COPYING  README.md  REUSE.toml  mdi-test.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
acc_app_optimisation/: __main__.py  foreign_imports.py  logging_setup.py  main_window.py
acc_app_optimisation/algos/: algo_base.py  algos_core.py  single_opt.py  test_env.py
acc_app_optimisation/algos/single_opt/: __init__.py  base_optimizer.py  optimizers.py  runner.py
acc_app_optimisation/envs/: __init__.py  builtin_envs.py  envs_prep.py
acc_app_optimisation/gui/: __init__.py  _control_pane_generated.py  _translate.py  cfgdialog.py  config_widget.py  control_pane.py  control_pane.ui  delayed_combo_box.py  excdialog.py  figures_view.py  file_selector.py  generated_main_window.py  main_window.py  main_window.ui  num_opt_tab.py  param_widget.py  plot_manager.py  plot_pane.py  popout_mdi_area.py  rl_exec_tab.py  rl_train_tab.py  task.py
acc_app_optimisation/gui/cfgwidget/: __init__.py  _field_widgets.py  _type_utils.py  _widget.py
acc_app_optimisation/gui/configuration/: __init__.py  _dialog.py  _field_widgets.py  _skeleton_points.py  _type_utils.py  _widget.py
acc_app_optimisation/gui2/: control_pane.py  num_opt_tab.py
acc_app_optimisation/job_control/: __init__.py  base.py
acc_app_optimisation/job_control/rl/: __init__.py  agents.py  execute.py  train.py  wrapper.py
acc_app_optimisation/job_control/single_objective/: __init__.py  builder.py  constraints.py  job_factory.py  jobs.py  optimizers.py  skeleton_points.py
acc_app_optimisation/job_control/train_rl/: __init__.py  agents.py  jobs.py
acc_app_optimisation/lsa/: lsa_communicator.py
acc_app_optimisation/qt_lsa_selector/: __init__.py  image.py  lsa_model.py  lsa_view.py
acc_app_optimisation/tests/: test_algos_single_opt_runner.py  test_foreign_imports.py  test_selection.py  test_single_objective.py  test_utils_layouts.py
acc_app_optimisation/utils/: accelerators.py  bounded.py  coerce_float.py  debug.py  disabled_updates.py  layouts.py  split_words.py  typecheck.py  utilities.py
deployment/app/: requirements-jar.json  requirements.txt
src/acc_app_optimisation/: __main__.py  distlocate.py  envs.py  foreign_imports.py  logging_setup.py  lsa_utils_hooks.py  translate.py
src/acc_app_optimisation/gui/: __init__.py  control_pane.py  excdialog.py  file_selector.py  main_window.py  num_opt_tab.py  plot_manager.py  popout_mdi_area.py  rl_exec_tab.py  rl_train_tab.py  sectioned_combo_box.py  task.py
src/acc_app_optimisation/gui/configuration/: __init__.py  _dialog.py  _field_widgets.py  _skeleton_points.py  _type_utils.py  _widget.py
src/acc_app_optimisation/job_control/: __init__.py  base.py
src/acc_app_optimisation/job_control/rl/: __init__.py  agents.py  execute.py  train.py  wrapper.py
src/acc_app_optimisation/job_control/single_objective/: __init__.py  builder.py  constraints.py  jobs.py  skeleton_points.py
src/acc_app_optimisation/tests/: test_foreign_imports.py  test_selection.py  test_single_objective.py
src/acc_app_optimisation/utils/: bounded.py  coerce_float.py  debug.py  disabled_updates.py  layouts.py  split_words.py  typecheck.py
