# SPDX-FileCopyrightText: 2020-2023 CERN
# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'setuptools >= 61',
    'wheel >= 0.36',
    'setuptools-scm[toml] >= 7.0',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'acc-app-optimisation'
description = 'GUI for generic numerical optimisation'
readme = 'README.md'
authors = [
    {name = 'Verena Kain', email = 'verena.kain@cern.ch'},
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
requires-python = '>=3.7'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Science/Research',
    'License :: Other/Proprietary License',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    'JPype1 ~= 1.0',
    'PyQt5 ~= 5.12',
    'accwidgets[app_frame,graph,log_console,lsa_selector,rbac,screenshot] ~= 3.0',
    'cern-awake-env ~= 0.18.0',
    'linac3-lebt-tuning >= 1.0.2, <2',
    'cern-isolde-offline-env ~= 0.0.5',
    'cern-leir-transfer-line-env ~= 0.5.6',
    'cern-sps-tune-env ~= 0.4.0',
    'cern-sps-splitter-opt-env ~= 0.0.9',
    'cern-sps-zs-alignment-env ~= 0.4.0',
    'cernml-coi ~= 0.8.15',
    'cernml-coi-optimizers[bobyqa,cernml-es,scipy,skopt] ~= 1.0',
    'cernml-coi-utils[matplotlib,pjlsa,pyjapc] ~= 0.2.10',
    'cernml-svd ~= 3.0',
    'gym >= 0.17',
    'importlib-metadata >=3.6; python_version<"3.8"',
    'numpy ~= 1.20',
    'psb-extr-and-recomb-optim ~= 1.1.0',
    'pylogbook ~= 3.3',
    'sps-blowup ~= 1.0.4',
    'stable-baselines3 ~= 1.0',
    'typing-extensions >= 4.6; python_version<"3.11"'
]

[project.optional-dependencies]
test = [
    'pytest >= 6.0',
    'pytest-mock >= 3.3',
    'pytest-qt >= 4.2',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/geoff-app'

[tool.setuptools]
zip-safe = true
platforms = [
    'CERN General Network',
    'CERN Technical Network',
]

[tool.setuptools_scm]

[tool.black]
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = 'black'

[tool.pylint.main]
extension-pkg-allow-list = ['PyQt5']

[tool.pylint.reports]
score = false
reports = false
output-format = 'parseable'

[tool.pylint.format]
ignore-long-lines = '<?https?://\S+>?$'

[tool.pylint.design]
max-attributes = 14
max-args = 7

[tool.pylint.'messages control']
disable = [
    'duplicate-code',
    'fixme',
    'missing-module-docstring',
    'missing-class-docstring',
    'missing-function-docstring',
    'too-few-public-methods',
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = [
    'cern_isolde_offline_env.*',
    'cern_sps_splitter_opt_env.*',
    'gym.*',
    'jpype.*',
    'linac3_lebt_tuning.*',
    'matplotlib.*',
    'scipy.*',
    'skopt.*',
    'psb_extr_and_recomb_optim.*',
    'pjlsa.*',
    'pybobyqa.*',
    'pyqtgraph.*',
    'pytestqt.*',
    'sps_blowup.*',
]
ignore_missing_imports = true
