# SPDX-FileCopyrightText: 2020-2023 CERN
# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'setuptools >= 61',
    'wheel >= 0.36',
    'setuptools-scm[toml] >= 7.0',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'acc-app-optimisation'
description = 'GUI for generic numerical optimisation'
readme = 'README.md'
authors = [
    {name = 'Verena Kain', email = 'verena.kain@cern.ch'},
    {name = 'Penny Madysa', email = 'penny.madysa@cern.ch'},
]
requires-python = '>=3.11'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Science/Research',
    'License :: Other/Proprietary License',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    'JPype1 ~= 1.0',
    'PyQt5 ~= 5.12',
    'accwidgets[app_frame,graph,log_console,lsa_selector,rbac,screenshot] ~= 3.0',
    'cernml-coi >= 0.9',
    'cernml-coi-optimizers[bobyqa,cernml-es,scipy,skopt] ~= 3.0.0',
    'cernml-coi-utils[matplotlib,pjlsa,pyjapc] ~= 0.3.0',
    'importlib-metadata >=3.6; python_version<"3.8"',
    'numpy ~= 1.20',
    'pylogbook ~= 3.3',
    'stable-baselines3 ~= 2.3',
    'typing-extensions >= 4.6; python_version<"3.11"',
    'cern-sps-splitter-opt-env >= 0.0.11',
    'cern-sps-zs-alignment-env ~= 0.5.4',
    'linac3-lebt-tuning ~= 1.1',
    'psb-extr-and-recomb-optim ~= 1.1.1',
    'geoff-optimizer-of-extraction-by-ring ~= 0.0.1',
    'cern-leir-transfer-line-env ~= 0.6.1',
]

[project.optional-dependencies]
test = [
    'pytest >= 6.0',
    'pytest-qt >= 4.2',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/geoff-app'

[tool.setuptools]
zip-safe = true
platforms = [
    'CERN General Network',
    'CERN Technical Network',
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['src']
doctest_optionflags = ['IGNORE_EXCEPTION_DETAIL']

[tool.coverage.run]
source = ['src']
branch = true

[tool.coverage.report]
exclude_also = [
    '^\s*@.*\.overload$',
    '^\s*def __del__',
    '^\s*except ImportError:$',
    '^\s*from .* import',
    '^\s*if .*\.TYPE_CHECKING:$',
    '^\s*if sys\.version_info ..? \(\d, \d+\):$',
    '^if __name__ == "__main__":$',
    '^\s*import ',
    '^\s*raise NotImplementedError',
]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = 'black'

[tool.pylint]
main.ignore-patterns = ['.*\.pyi$', 'test_.*\.py$']
main.extension-pkg-whitelist = ['PyQt5']
'messages control'.disable = ['all']
'messages control'.enable = [
    'F',
    'bad-inline-option',
    'cell-var-from-loop',
    # TODO: These require a lot of fixes.
    # 'missing-class-docstring',
    # 'missing-function-docstring',
    # 'missing-module-docstring',
    'singledispatch-method',
    'singledispatchmethod-function',
    'super-init-not-called',
    'typevar-double-variance',
    'typevar-name-incorrect-variance',
    'typevar-name-mismatch',
    'unrecognized-inline-option',
    'unrecognized-option',
]


[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = [
    'cern_isolde_offline_env.*',
    'cern_sps_splitter_opt_env.*',
    'gym.*',
    'jpype.*',
    'linac3_lebt_tuning.*',
    'matplotlib.*',
    'scipy.*',
    'skopt.*',
    'psb_extr_and_recomb_optim.*',
    'pjlsa.*',
    'pybobyqa.*',
    'pyqtgraph.*',
    'pytestqt.*',
    'sps_blowup.*',
]
ignore_missing_imports = true
