[metadata]
name = acc-app-optimisation
version = attr: acc_app_optimisation.__version__
summary = GUI for generic numerical optimisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cern.ch/vkain/acc-app-optimisation
author = Verena Kain <Verena.Kain@cern.ch>, Nico Madysa <Nico.Madysa@cern.ch>
author_email = Verena.Kain@cern.ch
classifiers=
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
platforms =
    CERN General Network
    CERN Technical Network

[options]
packages = find:
zip_safe = true
install_requires =
    JPype1 ~= 1.0  
    Py-BOBYQA ~= 1.2
    PyQt5 ~= 5.12
    accwidgets ~= 0.4.0
    cern-awake-env ~= 0.12.1
    cernml-coi ~= 0.3.2
    gym ~= 0.17.3
    numpy ~= 1.17
    pjlsa ~= 0.2.0
    pyjapc ~= 2.0
    pyqtgraph ~= 0.10.0  
    scipy ~= 1.3

[options.extras_require]
test =
    pytest ~= 6.0
    pytest-mock ~= 3.3
