[metadata]
name = acc-app-optimisation
version = attr: acc_app_optimisation.__version__
summary = GUI for generic numerical optimisation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cern.ch/vkain/acc-app-optimisation
author = Verena Kain <Verena.Kain@cern.ch>, Nico Madysa <Nico.Madysa@cern.ch>
author_email = Verena.Kain@cern.ch
classifiers=
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
platforms =
    CERN General Network
    CERN Technical Network

[options]
packages = find:
zip_safe = true
python_requires = ~= 3.7
install_requires =
    JPype1 ~= 1.0
    Py-BOBYQA ~= 1.2
    PyQt5 ~= 5.12
    accwidgets[app_frame, graph, log_console, lsa_selector, rbac] ~= 1.3.4
    cern-awake-env ~= 0.15.0
    cern-leir-transfer-line-env ~= 0.2.0
    cern-sps-tune-env ~= 0.3.0
    cern-sps-zs-alignment-env ~= 0.3.0
    cernml-coi ~= 0.7.0
    cernml-coi-funcs ~= 0.2.1
    cernml-svd ~= 2.0
    gym >= 0.17
    numpy ~= 1.17
    pjlsa ~= 0.2.0
    pyjapc ~= 2.0
    pyqtgraph ~= 0.10.0
    pyrbac ~= 0.0.7
    scipy ~= 1.3
    stable-baselines3 ~= 0.11.1

[options.extras_require]
test =
    pytest ~= 6.0
    pytest-mock ~= 3.3
dev =
    PyQt5-stubs ~= 5.12
    black
    mypy
    pylint
